force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__DurationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationType__c</fullName>
    <label>Duration Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>