force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__IssuingDepartmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssuingDepartmentId__c</fullName>
    <label>Issuing Department</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssuingDepartmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>