force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__JurisdictionName__c.field-meta.xml
<CustomField>
    <fullName>ssot__JurisdictionName__c</fullName>
    <label>Jurisdiction</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JurisdictionName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>