force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__ProcessingDurationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessingDurationText__c</fullName>
    <label>Processing Duration</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessingDurationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>