force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__RegulatoryAuthCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryAuthCategory__c</fullName>
    <label>Regulatory Authorization Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryAuthCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>