force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__RegulatoryAuthCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryAuthCode__c</fullName>
    <label>Regulatory Authorization Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryAuthCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>