force-app/main/default/objects/ssot__RegulatoryAuthorizationType__dlm/fields/ssot__rel_1739512792778_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512792778_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryAuthorizationType_IssuingD_rel</label>
    <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
    <relationshipLabel>RegulatoryAuthorizationType_IssuingD_rel</relationshipLabel>
    <relationshipName>rel_1739512792778_end</relationshipName>
    <type>Lookup</type>
</CustomField>